--- a/android/local.properties
+++ b/android/local.properties
@@ -1,13 +1,6 @@
-## This file must *NOT* be checked into Version Control Systems,
-# as it contains information specific to your local configuration.
-#
-# Location of the SDK. This is only used by Gradle.
-# For customization when using a Version Control System, please read the
-# header note.
-#Thu Dec 27 22:05:55 CST 2018
 flutter.buildMode=debug
 ndk.dir=/Users/huangcanhua/Library/Android/sdk/ndk-bundle
 flutter.versionName=1.0.0
-flutter.sdk=/Users/huangcanhua/flutter
-sdk.dir=/Users/huangcanhua/Library/Android/sdk
+flutter.sdk=D:\\Fultter\\flutter
+sdk.dir=C:\\androidsdk\\sdk
 flutter.versionCode=1
