--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,3 +42,4 @@ flutter:
       - images/github_icon.png
       - images/silan_icon.png
       - images/wechat_icon.png
+      - images/splash_logo.png
